# noise-generator

./: CMakeLists.txt  LICENSE  README.md
includes/: config.h  mapgen.h  math_def.h  noise.h  texture.h
src/: main.cpp
